--- a/.env.example
+++ b/.env.example
@@ -1,19 +1,20 @@
-APP_NAME=Laravel
-APP_ENV=local
+APP_NAME="Laravel set-server"
+APP_ENV=production
 APP_KEY=
-APP_DEBUG=true
-APP_URL=http://localhost
+APP_DEBUG=false
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+# The name of db service from docker-compose.yaml
+DB_HOST=db
 DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+# Change it for your data
+DB_DATABASE=set_game
+DB_USERNAME=laravel
+DB_PASSWORD=123123
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
